--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.4",
     "nodemon": "^3.0.1"
+  },
+  "type": "module",
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
