--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.4",
+    "node-cron": "^3.0.2",
     "nodemon": "^3.0.1"
   },
   "type": "module",
