--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.4",
     "node-cron": "^3.0.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "serverless-http": "^3.2.0"
   },
   "type": "module",
   "devDependencies": {
