--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.4",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.4",
+    "netlify-lambda": "^2.0.16",
     "node-cron": "^3.0.2",
     "nodemon": "^3.0.1",
     "serverless-http": "^3.2.0"
