--- a/package.json
+++ b/package.json
@@ -10,17 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "@netlify/functions": "^2.3.0",
+    "@types/express": "^4.17.20",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "moment": "^2.29.4",
-    "mongodb": "^6.1.0",
     "mongoose": "^7.5.4",
-    "netlify-lambda": "^2.0.16",
-    "node-cron": "^3.0.2",
-    "nodemon": "^3.0.1",
     "serverless-http": "^3.2.0"
   },
   "type": "module",
